--- a/docs/antora/antora.yml
+++ b/docs/antora/antora.yml
@@ -1,5 +1,5 @@
-name: lisk-core
-title: Lisk Core
+name: klayr-core
+title: Klayr Core
 version: 'master'
 display_version: '4.0 (latest)'
 #prerelease: -beta.0
