--- a/.github/actions/prepare-install/action.yml
+++ b/.github/actions/prepare-install/action.yml
@@ -7,7 +7,7 @@ runs:
     - name: Use Node.js 18
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version-file: '.nvmrc'
         cache: 'yarn'
     - name: Install dependencies
       shell: bash
