--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -28,4 +28,4 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish
-        run: npx lerna publish --canary --preid canary --registry https://npm.klayr.dev --yes
+        run: npm publish --canary --preid canary --registry https://npm.klayr.dev --yes
