--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "klayr-core",
-	"version": "4.0.3-alpha.0",
+	"version": "4.0.3",
 	"description": "Klayr blockchain application platform",
 	"author": "Klayr Holding B.V. <admin@klayr.xyz>, Lisk Foundation <admin@lisk.com>, lightcurve GmbH <admin@lightcurve.io>",
 	"license": "Apache-2.0",
