--- a/package.json
+++ b/package.json
@@ -107,11 +107,11 @@
 		}
 	},
 	"dependencies": {
-		"@klayr/chain-connector-plugin": "0.1.4-alpha.0",
-		"@klayr/faucet-plugin": "0.3.4-alpha.0",
-		"@klayr/generator-plugin": "0.4.4-alpha.0",
-		"@klayr/monitor-plugin": "0.4.4-alpha.0",
-		"@klayr/report-misbehavior-plugin": "0.4.4-alpha.0",
+		"@klayr/chain-connector-plugin": "0.1.4",
+		"@klayr/faucet-plugin": "0.3.4",
+		"@klayr/generator-plugin": "0.4.4",
+		"@klayr/monitor-plugin": "0.4.4",
+		"@klayr/report-misbehavior-plugin": "0.4.4",
 		"@oclif/core": "1.20.4",
 		"@oclif/plugin-autocomplete": "1.3.6",
 		"@oclif/plugin-help": "5.1.19",
@@ -119,9 +119,9 @@
 		"axios": "1.6.0",
 		"fs-extra": "11.1.0",
 		"inquirer": "8.2.5",
-		"klayr-commander": "6.0.5-alpha.0",
-		"klayr-framework": "0.11.4-alpha.1",
-		"klayr-sdk": "6.0.4-alpha.0",
+		"klayr-commander": "6.0.5",
+		"klayr-framework": "0.11.4",
+		"klayr-sdk": "6.0.4",
 		"tar": "6.1.11",
 		"tslib": "2.4.1"
 	},
