Removed legacy reclaim

--- a/config/mainnet/config.json
+++ b/config/mainnet/config.json
@@ -19,53 +19,53 @@
 		"blockTime": 7,
 		"chainID": "00000000",
 		"maxTransactionsSize": 15360,
-		"minimumCertifyHeight": 23461753
+		"minimumCertifyHeight": 66250
 	},
 	"network": {
-		"version": "5.1",
+		"version": "6.0",
 		"seedPeers": [
 			{
 				"ip": "mainnet-seed-01.klayr.xyz",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-02.klayr.one",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-03.klayr.network",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-04.klayr.net",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-05.klayr.xyz",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-06.klayr.net",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-07.klayr.one",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-08.klayr.xyz",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-09.klayr.network",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "mainnet-seed-10.klayr.net",
-				"port": 7667
+				"port": 8778
 			}
 		],
-		"port": 7667
+		"port": 8778
 	},
 	"transactionPool": {
 		"maxTransactions": 4096,
@@ -77,9 +77,9 @@
 	"modules": {
 		"dynamicReward": {
 			"tokenID": "0000000000000000",
-			"offset": 2160,
-			"distance": 3000000,
-			"brackets": ["500000000", "400000000", "300000000", "200000000", "200000000"]
+			"offset": 66250,
+			"distance": 9200000,
+			"brackets": ["200000000", "100000000"]
 		},
 		"fee": {
 			"feeTokenID": "0000000000000000"
