--- a/config/testnet/config.json
+++ b/config/testnet/config.json
@@ -19,33 +19,33 @@
 		"blockTime": 7,
 		"chainID": "01000000",
 		"maxTransactionsSize": 15360,
-		"minimumCertifyHeight": 20520176
+		"minimumCertifyHeight": 66250
 	},
 	"network": {
-		"version": "5.1",
+		"version": "6.0",
 		"seedPeers": [
 			{
 				"ip": "testnet-seed-01.klayr.xyz",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "testnet-seed-02.klayr.net",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "testnet-seed-03.klayr.one",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "testnet-seed-04.klayr.dev",
-				"port": 7667
+				"port": 8778
 			},
 			{
 				"ip": "testnet-seed-05.klayr.network",
-				"port": 7667
+				"port": 8778
 			}
 		],
-		"port": 7667
+		"port": 8778
 	},
 	"transactionPool": {
 		"maxTransactions": 4096,
@@ -57,9 +57,9 @@
 	"modules": {
 		"dynamicReward": {
 			"tokenID": "0100000000000000",
-			"offset": 2160,
-			"distance": 3000000,
-			"brackets": ["500000000", "400000000", "300000000", "200000000", "200000000"]
+			"offset": 66250,
+			"distance": 9200000,
+			"brackets": ["200000000", "100000000"]
 		},
 		"fee": {
 			"feeTokenID": "0100000000000000"
