--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "klayr-core",
-	"version": "4.0.4",
+	"version": "4.1.0-alpha.0",
 	"description": "Klayr blockchain application platform",
 	"author": "Klayr Holding B.V. <admin@klayr.xyz>, Lisk Foundation <admin@lisk.com>, lightcurve GmbH <admin@lightcurve.io>",
 	"license": "Apache-2.0",
@@ -112,6 +112,7 @@
 		"@klayr/generator-plugin": "0.4.4",
 		"@klayr/monitor-plugin": "0.4.4",
 		"@klayr/report-misbehavior-plugin": "0.4.4",
+		"@liskhq/lisk-db": "0.3.10",
 		"@oclif/core": "1.20.4",
 		"@oclif/plugin-autocomplete": "1.3.6",
 		"@oclif/plugin-help": "5.1.19",
